--- a/YSJViewer/YSJViewer-Info.plist
+++ b/YSJViewer/YSJViewer-Info.plist
@@ -8,6 +8,12 @@
 	<string>压缩机云秘书</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
+	<key>CFBundleIconFiles</key>
+	<array>
+		<string>Icon-120.png</string>
+		<string>Icon-114.png</string>
+		<string>Icon-57.png</string>
+	</array>
 	<key>CFBundleIdentifier</key>
 	<string>com.tmc.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -29,7 +35,7 @@
 		<string>audio</string>
 	</array>
 	<key>UIMainStoryboardFile</key>
-	<string>InputServerAddress</string>
+	<string>LoginStoryboard</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
@@ -38,12 +44,6 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
-	<key>CFBundleIconFiles</key>
-	<array>
-		<string>Icon-120.png</string>
-		<string>Icon-114.png</string>
-		<string>Icon-57.png</string>
 	</array>
 </dict>
 </plist>
